--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>hackTV</title>
+    <title>Like Look Solutions TV</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Samsung's WebAPI -->
     <script src='$WEBAPIS/webapis/webapis.js'></script>
