--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>hackTV</h1>
+      <h1>Like Look Solutions TV</h1>
       <div class="build"></div>
       <div class="cpu"></div>
     </div>
